Camlp5 Version 4.09:
---------------------

* [07 Sep 07] Added ability, with pa_macro.cmo, to define macro type
  expressions in signatures (e.g "DEFINE V(t) = t -> t").
* [06 Sep 07] Fixed problem of errors locations in Lisp and Scheme
  syntaxes.
* [01 Sep 07] Renamed modules Stdpp into Ploc and Token into Plexing.
  Changed the names of some of their definitions. Backward compatibility
  assumed.
* [31 Aug 07] For packagers: added DESTDIR in Makefiles to allow installation
  in fake root directories. Usage: make install DESTDIR=fake-root-dir

Camlp5 Version 4.08:
---------------------

* [] Updated documentation.
* [30 Aug 07] Added IFDEF macros for signatures (.mli files).
* [26 Aug 07] Added left factorization for consecutive rules of parsers
  (and lexers).
* [21 Aug 07] Added equality functions over syntax trees in module Pcaml.
* [21 Aug 07] Improved compiled version (camlp5o.opt) to add the fact
  that the grammar is LL(n) for rules starting with n terminals.
* [20 Aug 07] Updated library interface comments.
* [19 Aug 07] Added option -define with 'pa_macro.cmo' which prints the
  predefined macros and exit.
* [16 Aug 07] Added pa_extprint.cmo, a new syntax for extensible pretty
  printers adding a statement EXTEND_PRINTER (cf files pr_r.cmo and pr_o.ml
  as examples). Added library module Eprinter. Changes (simplifications) in
  interfaces of Pcaml for the printers.

Camlp5 Version 4.07:
---------------------

* [02 Aug 07] Fixed bug: option -o did not work for pr_r.cmo and pr_o.cmo
  (was always stdout).
* [01 Aug 07] In EXTEND statement, added symbol FLAG: like OPT but return
  a boolean value. The antiquotation kind "flag" must be used in this case,
  but the "opt" still works by compatibility.
* [30 Jul 07] Fixed bug in normal syntax: let C x = C 1 was not accepted.
* [30 Jul 07] Changed pretty printing *normal* syntax: let C x = .. printed
  like that, *not* transformed into let x = match .. with C x -> x.

Camlp5 Version 4.06:
---------------------