@@ -10,7 +10,7 @@
 (*                                                                     *)
 (***********************************************************************)
 
-(* $Id: grammar.mli,v 1.19 2007/09/02 19:30:29 deraugla Exp $ *)
+(* $Id: grammar.mli,v 1.20 2007/09/08 03:07:55 deraugla Exp $ *)
 
 (** Extensible grammars.
 
@@ -153,6 +153,11 @@ module type S =
 module GMake (L : GLexerType) : S with type te = L.te;
 
 (** {6 Miscellaneous} *)
+
+exception Skip;
+   (** Can be raised in semantic actions to skip an element list.
+       To be used in entries called by the meta-symbols LIST0 and
+       LIST1. Allow conditional parsing. *)
 
 value error_verbose : ref bool;
    (** Flag for displaying more information in case of parsing error;
