@@ -149,6 +149,11 @@ module GMake (L : GLexerType) : S with type te = L.te;;
 
 (** {6 Miscellaneous} *)
 
+exception Skip;;
+   (** Can be raised in semantic actions to skip an element list.
+       To be used in entries called by the meta-symbols LIST0 and
+       LIST1. Allow conditional parsing. *)
+
 val error_verbose : bool ref;;
    (** Flag for displaying more information in case of parsing error;
        default = [False] *)
