@@ -1,8 +1,11 @@
 Camlp5 Version 4.09:
 ---------------------
 
-* [07 Sep 07] Added ability, with pa_macro.cmo, to define macro type
-  expressions in signatures (e.g "DEFINE V(t) = t -> t").
+* [08 Sep 07] Added new features in pa_macro.cmo:
+  - ability to define macro type expressions in signatures, e.g.:
+       DEFINE V(t) = t -> t
+  - ability to define conditional constructors declarations and matches
+    cases, using IFDEF and IFNDEF with or without ELSE around a case.
 * [06 Sep 07] Fixed problem of errors locations in Lisp and Scheme
   syntaxes.
 * [01 Sep 07] Renamed modules Stdpp into Ploc and Token into Plexing.
